--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
@@ -15,21 +15,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- CSS Base -->
-    <link rel="stylesheet" type='text/css' media='all' href="../static/css/webslides.css">
+    <link rel="stylesheet" type='text/css' media='all' href="~/css/webslides.css">
 
     <!-- Optional - CSS SVG Icons (Font Awesome) -->
-    <link rel="stylesheet" type="text/css" media="all" href="../static/css/svg-icons.css">
+    <link rel="stylesheet" type="text/css" media="all" href="~/css/svg-icons.css">
 
     <!-- SOCIAL CARDS (ADD YOUR INFO) -->
 
     <!-- FAVICONS -->
-    <link rel="shortcut icon" sizes="16x16" href="../static/images/favicons/favicon.png">
-    <link rel="shortcut icon" sizes="32x32" href="../static/images/favicons/favicon-32.png">
-    <link rel="apple-touch-icon icon" sizes="76x76" href="../static/images/favicons/favicon-76.png">
-    <link rel="apple-touch-icon icon" sizes="120x120" href="../static/images/favicons/favicon-120.png">
-    <link rel="apple-touch-icon icon" sizes="152x152" href="../static/images/favicons/favicon-152.png">
-    <link rel="apple-touch-icon icon" sizes="180x180" href="../static/images/favicons/favicon-180.png">
-    <link rel="apple-touch-icon icon" sizes="192x192" href="../static/images/favicons/favicon-192.png">
+    <link rel="shortcut icon" sizes="16x16" href="~/images/favicons/favicon.png">
+    <link rel="shortcut icon" sizes="32x32" href="~/images/favicons/favicon-32.png">
+    <link rel="apple-touch-icon icon" sizes="76x76" href="~/images/favicons/favicon-76.png">
+    <link rel="apple-touch-icon icon" sizes="120x120" href="~/images/favicons/favicon-120.png">
+    <link rel="apple-touch-icon icon" sizes="152x152" href="~/images/favicons/favicon-152.png">
+    <link rel="apple-touch-icon icon" sizes="180x180" href="~/images/favicons/favicon-180.png">
+    <link rel="apple-touch-icon icon" sizes="192x192" href="~/images/favicons/favicon-192.png">
 
     <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -101,14 +101,14 @@
     <!--main-->
 
     <!-- Required -->
-    <script src="../static/js/webslides.js"></script>
+    <script src="~/js/webslides.js"></script>
 
     <script>
       window.ws = new WebSlides();
     </script>
 
     <!-- OPTIONAL - svg-icons.js (fontastic.me - Font Awesome as svg icons) -->
-    <script defer src="../static/js/svg-icons.js"></script>
+    <script defer src="~/js/svg-icons.js"></script>
 
   </body>
 </html>
