--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- SEO -->
-    <title>PROPUESTA</title>
-    <meta name="description" content="Propuesta de mejoramiento de platafoma web.">
-
-    <!-- URL CANONICAL -->
-    <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
@@ -39,12 +32,6 @@
     <main role="main">
       <article id="webslides">
 
-        <!-- Quick Guide
-          - Each parent <section> in the <article id="webslides"> element is an individual slide.
-          - Vertical sliding = <article id="webslides" class="vertical">
-          - <div class="wrap"> = container 90% / <div class="wrap size-50"> = 45%;
-        -->
-
         <section class="bg-purple aligncenter">
          <span class="background dark" style="background-image:url('http://www.bber.umt.edu/images/FIR/forest.jpg')"></span>
           <!--.wrap = container (width: 90%) -->
@@ -71,24 +58,14 @@
             <div class="grid vertical-align">
               <div class="column">
                 <h3><strong>Estudio de Código preexistente y entidades</strong></h3>
-                <p class="text-intro">Se estudiarán los <code>&lt;scripts&gt;</code> in the #webslides element is an individual slide. </p>
-                <p>Code looks neat, pure. It uses <strong>intuitive markup</strong> with popular naming conventions. There's no need to overuse classes or nesting. Based on <a href="https://github.com/jennschiffer/SimpleSlides">SimpleSlides</a>, by <a href="http://jennmoney.biz">Jenn Schiffer</a>. <strong>Tutorials</strong>: <a href="../demos/components.html" title="WebSlides Components">Components</a> &middot; <a href="../demos/classes.html" title="WebSlides Classes">Classes</a>.</p>
+                <p class="text-intro">Se estudiarán el <code>&lt;código&gt;</code> preexistente para determinar sus funcionalidades y su integración o reemplazo dentro de la nueva plataforma. </p>
+                <p>Cada módulo o <code>&lt;script&gt;</code> utilizado por la plataforma actual será analizado para determinar un diseño que los integre.</p>
               </div>
               <!-- .end .column -->
               <div class="column">
-                <pre>&lt;article id="webslides"&gt;
-  <span class="code-comment">&lt;!-- Slide 1 --&gt;</span>
-  &lt;section&gt;
-    &lt;h1&gt;Design for trust&lt;/h1&gt;
-  &lt;/section&gt;
-  <span class="code-comment">&lt;!-- Slide 2 --&gt;</span>
-  &lt;section class="bg-primary"&gt;
-    &lt;div class="wrap"&gt;
-      &lt;h2&gt;.wrap = container (width: 90%)&lt;/h2&gt;
-    &lt;/div&gt;
-  &lt;/section&gt;
-&lt;/article&gt;
-</pre>
+                <pre><img src="https://pluralsight.imgix.net/paths/python-7be70baaac.png"/>
+		<img src="https://www.planet-source-code.com/vb/2010Redesign/images/LangugeHomePages/HTML5_CSS_JavaScript.png"/>
+		<img src="https://www.r-project.org/logo/Rlogo.png"/></pre>
               </div>
               <!-- .end .column -->
             </div>
@@ -100,14 +77,12 @@
     </main>
     <!--main-->
 
-    <!-- Required -->
     <script src="js/webslides.js"></script>
 
     <script>
       window.ws = new WebSlides();
     </script>
 
-    <!-- OPTIONAL - svg-icons.js (fontastic.me - Font Awesome as svg icons) -->
     <script defer src="js/svg-icons.js"></script>
 
   </body>
