--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" sizes="16x16" href="images/favicons/favicon.png">
     <link rel="shortcut icon" sizes="32x32" href="images/favicons/favicon-32.png">
     <link rel="apple-touch-icon icon" sizes="76x76" href="images/favicons/favicon-76.png">
-    <link rel="apple-touch-icon icon" sizes="120x120" href="images/favicons/favicon-120.png">
+ A partir del modelo actual se determinarán las entidades y sus propiedades<link rel="apple-touch-icon icon" sizes="120x120" href="images/favicons/favicon-120.png">
     <link rel="apple-touch-icon icon" sizes="152x152" href="images/favicons/favicon-152.png">
     <link rel="apple-touch-icon icon" sizes="180x180" href="images/favicons/favicon-180.png">
     <link rel="apple-touch-icon icon" sizes="192x192" href="images/favicons/favicon-192.png">
@@ -58,14 +58,19 @@
             <div class="grid vertical-align">
               <div class="column">
                 <h3><strong>Estudio de Código preexistente y entidades</strong></h3>
-                <p class="text-intro">Se estudiarán el <code>&lt;código&gt;</code> preexistente para determinar sus funcionalidades y su integración o reemplazo dentro de la nueva plataforma. </p>
+		      <img src="https://pluralsight.imgix.net/paths/python-7be70baaac.png"/>
+		<img src="https://www.planet-source-code.com/vb/2010Redesign/images/LangugeHomePages/HTML5_CSS_JavaScript.png"/>
+		<img src="https://www.r-project.org/logo/Rlogo.png"/>
+                <p class="text-intro">Se estudiarán el <code>&lt;código&gt;</code> preexistente para determinar sus funcionalidades y su integración o reemplazo dentro de la nueva plataforma.
+			<br/>
+			A partir de este modelo se determinarán las entidades, sus atributos y relaciones reportado mediante un diagrama de relaciones de 
+			entidades (Entity Relationship Diagram - ERD).
+		      </p>
                 <p>Cada módulo o <code>&lt;script&gt;</code> utilizado por la plataforma actual será analizado para determinar un diseño que los integre.</p>
               </div>
               <!-- .end .column -->
               <div class="column">
-                <pre><img src="https://pluralsight.imgix.net/paths/python-7be70baaac.png"/>
-		<img src="https://www.planet-source-code.com/vb/2010Redesign/images/LangugeHomePages/HTML5_CSS_JavaScript.png"/>
-		<img src="https://www.r-project.org/logo/Rlogo.png"/></pre>
+                <pre></pre>
               </div>
               <!-- .end .column -->
             </div>
