--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                       <!-- .end .column -->
                       <div class="column">
                           <pre>
-                          <img src="images/solved.png">
+                          <img src="images/solved.PNG">
 
                         </pre>
                       </div>
