--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <!--.wrap = container (width: 90%) -->
               <div class="wrap aligncenter fadeInUp">
                   <p class="text-subtitle">Diseño:</p>
-                  <h2>Mejoramientos visuales</h2>
+                  <h2>Mejoras visuales</h2>
               </div>
               <!-- .end .wrap -->
           </section>
